RESOLVED FIXED85807
Fix containerForRepaint() assumption about non-null enclosingLayer()
https://bugs.webkit.org/show_bug.cgi?id=85807
Summary Fix containerForRepaint() assumption about non-null enclosingLayer()
Adrienne Walker
Reported 2012-05-07 10:30:42 PDT
Fix containerForRepaint() assumption about non-null enclosingLayer()
Attachments
Failing test (932 bytes, patch)
2012-05-07 10:30 PDT, Adrienne Walker
no flags
Patch (1.58 KB, patch)
2012-05-07 10:32 PDT, Adrienne Walker
no flags
Rebased for landing (1.53 KB, patch)
2012-05-07 11:29 PDT, Adrienne Walker
no flags
Adrienne Walker
Comment 1 2012-05-07 10:30:55 PDT
Created attachment 140545 [details] Failing test
Adrienne Walker
Comment 2 2012-05-07 10:32:46 PDT
Adrienne Walker
Comment 3 2012-05-07 10:36:06 PDT
smfr: I looked into why https://chromiumcodereview.appspot.com/10342008/ got reverted on the Chromium branch, and it turned out that there was a crash that (mistakenly) looked like it started occurring because of your change. So, it was conservatively reverted on the branch. I've attached the messy autogenerated test that was triggering it. However, that revision range ended up being incorrect and it wasn't due to your patch. This is a pretty obvious fix, so I just went ahead and patched it.
WebKit Review Bot
Comment 4 2012-05-07 10:57:11 PDT
Comment on attachment 140547 [details] Patch Rejecting attachment 140547 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: exit_code: 1 cwd: /mnt/git/webkit-commit-queue/ Parsed 2 diffs from patch file(s). patching file Source/WebCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Source/WebCore/rendering/RenderObject.cpp Hunk #1 FAILED at 1243. 1 out of 1 hunk FAILED -- saving rejects to file Source/WebCore/rendering/RenderObject.cpp.rej Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--force', u'--reviewer', u'Simon Fras..." exit_code: 1 cwd: /mnt/git/webkit-commit-queue/ Full output: http://queues.webkit.org/results/12644206
Adrienne Walker
Comment 5 2012-05-07 11:29:59 PDT
Created attachment 140562 [details] Rebased for landing
WebKit Review Bot
Comment 6 2012-05-07 12:35:02 PDT
Comment on attachment 140562 [details] Rebased for landing Clearing flags on attachment: 140562 Committed r116339: <http://trac.webkit.org/changeset/116339>
WebKit Review Bot
Comment 7 2012-05-07 12:35:12 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.