Fix containerForRepaint() assumption about non-null enclosingLayer() https://bugs.webkit.org/show_bug.cgi?id=85807

Reviewed by Simon Fraser.

* rendering/RenderObject.cpp:
(WebCore::RenderObject::containerForRepaint):


Canonical link: https://commits.webkit.org/103397@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116339 268f45cc-cd09-0410-ab3c-d52691b4dbfc